Bug 379887 - KIO does not show (copy-)progress windows without a running kuiserver/JobViewServer
Summary: KIO does not show (copy-)progress windows without a running kuiserver/JobView...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.34.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 401607 413348 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-05-16 02:56 UTC by Kartoffel
Modified: 2019-10-23 06:00 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.58
Sentry Crash Report:


Attachments
Minimal solution (727 bytes, patch)
2017-05-16 02:59 UTC, Kartoffel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kartoffel 2017-05-16 02:56:38 UTC
The progress of file operations by KIO is usually shown as part of
the notifications in the system tray. This can be disabled by
unchecking "Track file transfers and other jobs" in notifications
settings (and restarting the plasma session), in which case the
progress will be reported using a small window [1].

However, when using a KIO based application without the plasma
desktop (in my case dolphin and i3) one gets no progress information
at all, as the KDE system tray is (obviously) not available and
the check for showing the window is somewhat flawed. The relevant
code should be in KDynamicJobTracker::registerJob. As far as I
understand it checks for a DBus session and asks the kuiserver,
wheter the system tray notifications are disabled before creating
a separate window. This fails without a running kuiserver. I have
attached a small patch, which leads to the expected behavior, but
I don't know, wheter this breaks any other use case.


Steps to Reproduce:
- Start dolphin without the plasma desktop and copy a larger file.

Actual Results:
- The file is copied without a progress window.

Expected Results:
- The file is copied while showing a progress window.

Possible Solution:
- See the attached patch for a minimal working solution.

[1] https://forum.kde.org/viewtopic.php?f=22&t=131078#p351705
Comment 1 Kartoffel 2017-05-16 02:59:41 UTC
Created attachment 105577 [details]
Minimal solution
Comment 2 Panard 2017-08-13 19:34:32 UTC
Thank you very much for this patch!
I have no plasma installed neither, and it is a pity that kio does not adapt to this.. I hope your patch will be integrated, or a proper workaround given..
Comment 3 Kartoffel 2017-08-18 21:35:01 UTC
As a temporary workaround you can emulate the necessary dbus interface with a custom script. See https://pastebin.com/Q8sEg9G6 for a python example. Requires python, python-dbus and python-gobject. Just keep it running in the background and you should see the copy dialog again.
Comment 4 Nate Graham 2017-11-20 05:11:20 UTC
Thanks for the patch! Patches in bug reports tend to be overlooked, so please feel free to submit it at https://phabricator.kde.org/. Even if it's rejected in its current form, it will probably spark a conversation about the best way to implement the changes.
Comment 5 Christoph Feck 2018-12-01 13:25:50 UTC
*** Bug 401607 has been marked as a duplicate of this bug. ***
Comment 6 Antonio 2018-12-01 13:42:08 UTC
I'm aggressive, simply because as developers you are not sensible enough to your user base.

I read about this topic, when I was just trying to solve the problem for my desktop computer, and I noted that it is not something 'new'. You received several request of support, and you MUST KNOW that this is a strong really weird usability issue for tons of users.

As a developer, I fixed it strait in a minute.!! You do not act, just because you wanna not act.

Moreover, you never think for a minute, that people wanna know in the official documentation, that can be read from the help menu, something about this.
Never realized that asking people to 'disabled by
unchecking "Track file transfers and other jobs" without any help to find in which of the 1000 options in the desktop they can find this setting is useless.
And, finally, I'm reporting a bug. Since, I followed everything but I cannot still get my stupid obsolete and clearly old fashioned progress bar in its window.
Comment 7 Nate Graham 2018-12-01 15:23:57 UTC
That patch is not enough; all it has the effect of doing is to *always* show the progress dialog, even in Plasma when KUIServer is running. I'll see if I can modify it to produce the correct results for everyone.
Comment 8 Kai Uwe Broulik 2019-04-12 10:40:25 UTC
Git commit 580fec7c0b20a4e9b138ce71b1380a49e5180591 by Kai Uwe Broulik.
Committed on 12/04/2019 at 10:39.
Pushed by broulik into branch 'master'.

[KDynamicJobTracker] When kuiserver isn't available, also fall back to widget dialog

It asks kuiserver whether we need to display a widget job tracker.
However, kuiserver itself might not be available at this point, so handle the call itself failing, too.

Differential Revision: https://phabricator.kde.org/D20465

M  +3    -2    src/widgets/kdynamicjobtracker.cpp

https://commits.kde.org/kio/580fec7c0b20a4e9b138ce71b1380a49e5180591
Comment 9 Christoph Feck 2019-10-23 06:00:23 UTC
*** Bug 413348 has been marked as a duplicate of this bug. ***