[KDynamicJobTracker] When kuiserver isn't available, also fall back to widget dialog

It asks kuiserver whether we need to display a widget job tracker.
However, kuiserver itself might not be available at this point, so handle the call itself failing, too.

BUG: 379887

Differential Revision: https://phabricator.kde.org/D20465